--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -7,8 +7,8 @@
 body {
     font-family: system-ui, -apple-system, sans-serif;
     line-height: 1.6;
-    padding: 20px;
-    max-width: 800px;
+    /*padding: 20px;
+    max-width: 800px;*/
     margin: 0 auto;
 }
 
